Improve Ipv6Decoder.canDecode()
Access the packet chain only once and use an instanceof pattern to
streamline checks.

Change-Id: I257e94055ebd5d0b38ca7bf0fe59edef154b0f49
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>